# 3d-orienter

./: README.md  our_pipeline_benchmark_shapenet_chamfer_dist.py  our_pipeline_benchmark_shapenet_chamfer_dist_with_conformal.py  our_pipeline_up_accuracy_benchmark_shapenet.py  pyproject.toml  train_flipper.py  train_quotient_orienter.py  two_stage_inference_script.py
config/default/: specs.json5
data/: all_index.txt  sample_index.txt
dataloaders/: MultiMeshDataset.py  MultiMeshFlipperDataset.py
launch_internals/: launch_job.py
ml_models/orienter_model/: DGCNNFlipper.py  DGCNNOrienter.py
pl_models/: FlipperTrainerModel.py  OrienterTrainerModel.py
utils/: 24_cube_flips.pt  generate_cube_flips.py  generate_index_file.py  helpers.py  inference_helpers.py  losses.py  preprocess_modelnet40_meshes.py  presample_point_clouds_from_mesh.py
